--- a/app/components/user/profile/profile.component.html
+++ b/app/components/user/profile/profile.component.html
@@ -146,11 +146,7 @@
 
     <!-- Sección de historial de pedidos -->
     <div class="orders-section">
-      <h2>historial de pedidos</h2>
-      <div id="pedidos">
-        <!-- Los pedidos se cargarán aquí -->
-        <p class="no-orders">Aún no tienes pedidos</p>
-      </div>
+      <app-historial-pedidos></app-historial-pedidos>
     </div>
   </div>
 
